--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -24,18 +24,6 @@ body {
   padding: 0 24px 80px;
 }
 
-.abstract-toggle {
-  border: 0;
-  background: none;
-  padding: 0;
-  margin: 0;
-  color: #158df7;
-  font: inherit;
-  font-weight: 600;
-  cursor: pointer;
-  text-decoration: none;
-}
-
 a {
   color: var(--accent);
   font-weight: 600;
@@ -43,14 +31,8 @@ a {
 }
 
 a:hover,
-a:focus,
-.abstract-toggle:hover,
-.abstract-toggle:focus {
+a:focus {
   text-decoration: underline;
-}
-
-.abstract-content {
-  margin-top: 0.8rem;
 }
 
 h1,
